Fix UI navigation, filters and goals modal; add Hostinger packaging script

--- a/.gitignore
+++ b/.gitignore
@@ -16,9 +16,12 @@
 /public/build
 /public/hot
 /public/storage
+/public/mockups
 /storage/*.key
 /storage/pail
 /vendor
+/.hostinger_staging
+sors-hostinger-backup-*.zip
 Homestead.json
 Homestead.yaml
 Thumbs.db
