--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 /storage/pail
 /vendor
 /.hostinger_staging
+kitamo-hostinger-backup-*.zip
 sors-hostinger-backup-*.zip
 Homestead.json
 Homestead.yaml
