--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           node-version: 20.19.6
       - run: npm ci --legacy-peer-deps
-      - run: npm run build
+      - run: npx vite build
       - name: Deploy
         run: |
           mkdir -p ~/.ssh
