--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,11 +22,17 @@ jobs:
           mkdir -p ~/.ssh
           echo "${{ secrets.SSH_KEY }}" > ~/.ssh/key
           chmod 600 ~/.ssh/key
-          rsync -avz -e "ssh -i ~/.ssh/key -p 65002 -o StrictHostKeyChecking=no" \
-            --exclude='.git' --exclude='node_modules' \
-            ./ u626119115@147.79.84.203:~/domains/kitamo.com.br/public_html
+          SSH_OPTS="-i ~/.ssh/key -p 65002 -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=30 -o ServerAliveCountMax=6"
+          for attempt in 1 2 3; do
+            echo "Deploy attempt $attempt/3..."
+            rsync -avz --timeout=60 -e "ssh $SSH_OPTS" \
+              --exclude='.git' --exclude='node_modules' \
+              ./ u626119115@147.79.84.203:~/domains/kitamo.com.br/public_html && break
+            sleep 10
+          done
       - name: Fix build path (Hostinger docroot)
         run: |
-          ssh -i ~/.ssh/key -p 65002 -o StrictHostKeyChecking=no \
+          SSH_OPTS="-i ~/.ssh/key -p 65002 -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o ServerAliveInterval=30 -o ServerAliveCountMax=6"
+          ssh $SSH_OPTS \
             u626119115@147.79.84.203 \
             'cd ~/domains/kitamo.com.br/public_html && mkdir -p build && rsync -a --delete public/build/ build/'
