--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "vue-tsc": "^2.0.24"
     },
     "dependencies": {
+        "@headlessui/vue": "^1.7.23",
         "@vueup/vue-quill": "^1.2.0",
         "quill": "^1.3.7",
         "ziggy-js": "^2.6.0"
