--- a/.remotion-studio/package.json
+++ b/.remotion-studio/package.json
@@ -14,6 +14,8 @@
   "devDependencies": {
     "@remotion/eslint-config-flat": "4.0.427",
     "@remotion/tailwind": "^4.0.427",
+    "@remotion/tailwind-v4": "^4.0.427",
+    "@tailwindcss/postcss": "^4.2.0",
     "@types/react": "19.2.7",
     "@types/web": "0.0.166",
     "autoprefixer": "^10.4.24",
