ci: fix ssh setup and deploy retry logic in github actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,20 +23,27 @@ jobs:
       - run: npm ci --legacy-peer-deps
       - run: npm run build
       - name: Setup SSH
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_KEY }}
         run: |
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_KEY }}" > ~/.ssh/key
+          echo "$SSH_PRIVATE_KEY" > ~/.ssh/key
           chmod 600 ~/.ssh/key
       - name: Deploy
         run: |
           for attempt in 1 2 3; do
             echo "Deploy attempt $attempt/3..."
-            rsync -avz --timeout=60 -e "ssh $SSH_OPTS" \
+            if rsync -avz --timeout=60 -e "ssh $SSH_OPTS" \
               --exclude='.git' --exclude='node_modules' \
-              ./ $REMOTE:$PROJECT_DIR && break
+              ./ $REMOTE:$PROJECT_DIR; then
+              echo "Deploy succeeded"
+              exit 0
+            fi
             sleep 10
           done
-      - name: Verify build assets
+          echo "Deploy failed after 3 attempts"
+          exit 1
+      - name: Verify build assets exist on Hostinger
         run: |
           ssh $SSH_OPTS $REMOTE \
             "cd $PROJECT_DIR && test -f public/build/manifest.json && echo 'Assets OK'"
